--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 }
 :root {
     --cell-size: 100px;
-    --mark-size: cal(var(var(--cell-size)) * .9);
+    --mark-size: calc(var(--cell-size) * .9);
 }
 body {
     margin: 0;
@@ -17,11 +17,25 @@ body {
     grid-template-columns: repeat(3, auto);
     justify-items: center;
     align-items: center;
+
 }
+
+
 .cell {
     width: var(--cell-size);
     height: var(--cell-size);
-    border: 1px solid #333;
+    border: 1px solid #333; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+
+}
+
+.cell.x,
+.cell.circle {
+    cursor: not-allowed;
 }
 
 .cell:nth-child(2),
@@ -39,4 +53,95 @@ body {
 .cell:nth-child(7),
 .cell:nth-child(8) {
     border-bottom: none;
+}
+
+.cell.x::before,
+.cell.x::after {
+    background-color: black;
+}
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.x .cell:not(.x):not(.circle):hover::after,
+.board.circle .cell:not(.x):not(.circle):hover::before,
+.board.circle .cell:not(.x):not(.circle):hover::after {
+    background-color: lightgrey;
+}
+
+
+.cell.x::before,
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.x .cell:not(.x):not(.circle):hover::after {
+    content: '';
+    width: calc(var(--mark-size) * .15);
+    height: var(--mark-size);
+    position: absolute;
+}
+
+.cell.x::before,
+.board.x .cell:not(.x):not(.circle):hover::before {
+    transform: rotate(45deg);
+}
+
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::after {
+    transform: rotate(-45deg);
+}
+
+.cell.circle::before,
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::before,
+.board.circle .cell:not(.x):not(.circle):hover::after {
+    content: '';
+    position: absolute;
+    border-radius: 50%;
+}
+
+.cell.circle::before {
+    background-color: black;
+}
+.cell.circle::before,
+.board.circle .cell:not(.x):not(.circle):hover::before {
+    width: var(--mark-size);
+    height: var(--mark-size);
+
+}
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::after {
+    width: calc(var(--mark-size) * .7);
+    height: calc(var(--mark-size) * .7);
+    background-color: white;
+}
+
+.winning-message {
+    display: none;    
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .9);
+
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 5rem;
+    flex-direction: column;
+}
+
+.winning-message button{
+    font-size: 3rem;
+    background-color: white;
+    border: 1px solid black;
+    padding: .25em .5 em;
+    cursor: pointer;
+}
+
+.winning-message button:hover{
+    background-color: black;
+    border-color: white;
+    color: white;
+}
+
+.winning-message.show{
+    display: flex;
 }
